--- a/.env.example
+++ b/.env.example
@@ -101,3 +101,7 @@ FILES_CLEANUP_INTERVAL_HOURS=1
 # 是否启用用户文件隔离（每个用户只能看到自己上传的文件）
 FILES_USER_ISOLATION_ENABLED=true
 ##########################################################################
+
+# 新增
+# 添加速率限制
+MODEL_RATE_LIMITS='{"gemini-2.5-pro": {"concurrency": 1, "delay": 2}}'
