AI: 好的，遵照您的指示。
好的，遵照您的指示。

我将修改速率限制器的核心逻辑，从**“并发控制”模式**切换到您所期望的**“请求间隔控制”模式**。这将确保请求以平滑的速率发送，而不是限制同时处理的数量。

### **步骤 1: 修改速率限制处理器 (`rate_limit_handler.py`)**

我将重写 `ModelRateLimiter` 的内部实现。它现在将基于时间戳来确保请求之间有最小的时间间隔，而不是使用信号量来限制并发。

---

---

### **步骤 2: 更新配置文件示例 (`.env.example`)**

我将更新 `.env.example` 文件中的注释和示例值，以反映新的 `interval` 配置项，使其更清晰易懂。

---

---

修改完成。新的速率限制器现在会确保对配置模型的请求之间有最小的时间间隔，这能更有效地匹配如“每分钟N次请求”之类的API限制。其他服务文件无需更改，因为它们调用的接口 `rate_limiter.limit(model)` 保持不变。

[AI 已应用变更到 .env.example]

--- a/.env.example
+++ b/.env.example
@@ -103,5 +103,7 @@ FILES_USER_ISOLATION_ENABLED=true
 ##########################################################################
 
 # 新增
-# 添加速率限制
-MODEL_RATE_LIMITS='{"gemini-2.5-pro": {"concurrency": 1, "delay": 2}}'
+# 添加速率限制（请求间隔模式）
+# "interval": 2 表示对该模型的两次连续请求之间至少间隔2秒。
+# 这用于平滑请求速率，以匹配API的RPM（每分钟请求数）限制，而不是限制并发连接数。
+MODEL_RATE_LIMITS='{"gemini-2.5-pro": {"interval": 2}}'
