AI: 好的，遵照您的指示。我们将把速率限制系统升级为支持可配置时间窗口的模式，实现TP5M（每5分钟Token数）或任何自定义时长的Token限制。
好的，遵照您的指示。我们将把速率限制系统升级为支持可配置时间窗口的模式，实现TP5M（每5分钟Token数）或任何自定义时长的Token限制。

### **步骤 1: 更新配置文件格式**

我将更新 `.env.example` 文件，以反映支持自定义时间窗口的、更灵活的新配置格式。

---

---

### **步骤 2: 升级速率限制处理器以支持可配置时间窗口**

现在，我将修改 `app/handler/rate_limit_handler.py` 的核心逻辑。
- `_parse_config` 方法将被更新，以解析新的配置结构（包括 `limit` 和 `window_seconds`）。
- `reserve_tokens` 方法将使用每个模型自定义的 `window_seconds`，而不是固定的60秒。

---

---

所有必要的修改已完成。系统现在支持为每个模型独立配置Token限制和时间窗口，使其能够灵活适应各种API的速率限制策略。

[AI 已应用变更到 .env.example]

--- a/.env.example
+++ b/.env.example
@@ -103,8 +103,9 @@ FILES_USER_ISOLATION_ENABLED=true
 ##########################################################################
 
 # 新增
-# 添加每分钟Token数 (TPM) 限制。
-# 如果一个模型在一分钟内消耗的Token总数（基于输入估算）超过此限制，
+# 添加每个可配置时间窗口内的Token数限制。
+# 如果一个模型在指定的时间窗口内（单位：秒）消耗的Token总数超过限制，
 # 请求将被立即拒绝并返回 429 错误。
-# 这对于严格控制API成本非常有用。
-MODEL_TPM_LIMITS='{"gemini-2.5-pro": 60000}'
+# 这对于精确匹配API的速率限制策略和严格控制成本非常有用。
+# 示例：gemini-1.5-pro-latest 每 5 分钟 (300秒) 限制 300,000 Token
+MODEL_TPM_LIMITS='{"gemini-1.5-pro-latest": {"limit": 300000, "window_seconds": 300}}'
