AI: 好的，我们开始执行计划的第一步。
好的，我们开始执行计划的第一步。

**第一步：配置准备**

我们将在配置文件中添加 `MODEL_KEY_LIMITS`，用于定义每个模型下单个密钥的速率限制。

---

---

---

第一步已完成。接下来，我将为您创建新的速率限制器骨架。请指示我继续。

[AI 已应用变更到 .env.example]

--- a/.env.example
+++ b/.env.example
@@ -109,3 +109,12 @@ FILES_USER_ISOLATION_ENABLED=true
 # 这对于精确匹配API的速率限制策略和严格控制成本非常有用。
 # 示例：gemini-1.5-pro-latest 每 5 分钟 (300秒) 限制 300,000 Token
 MODEL_TPM_LIMITS='{"gemini-1.5-pro-latest": {"limit": 300000, "window_seconds": 300}}'
+
+# 新增
+# 为池中的 *每一个API密钥* 在 *特定模型* 上应用独立的速率限制。
+# 当某个密钥在某个模型上达到限制后，它会暂时从该模型的轮询中移除，直到限制窗口过去后自动恢复。
+# - rpm: 每分钟请求数 (Requests Per Minute)
+# - tpm: 每分钟Token数 (Tokens Per Minute)
+# - rpd: 每天请求数 (Requests Per Day)
+# 示例: 对 gemini-1.5-pro-latest 模型，每个key的限制为每分钟5次请求，每分钟100,000个Token。
+MODEL_KEY_LIMITS='{"gemini-1.5-pro-latest": {"rpm": 5, "tpm": 100000}}'
