--- a/.env.example
+++ b/.env.example
@@ -117,4 +117,4 @@ MODEL_TPM_LIMITS='{"gemini-1.5-pro-latest": {"limit": 300000, "window_seconds": 
 # - tpm: 每分钟Token数 (Tokens Per Minute)
 # - rpd: 每天请求数 (Requests Per Day)
 # 示例: 对 gemini-1.5-pro-latest 模型，每个key的限制为每分钟5次请求，每分钟100,000个Token。
-MODEL_KEY_LIMITS='{"gemini-1.5-pro-latest": {"rpm": 5, "tpm": 100000}}'
+MODEL_KEY_LIMITS='{"gemini-1.5-pro-latest": {"rpm": 5, "tpm": 100000, "rpd": 1000}}'
