AI: 好的，我将开始执行将数据库支持从 MySQL 迁移到 PostgreSQL 的计划。
好的，我将开始执行将数据库支持从 MySQL 迁移到 PostgreSQL 的计划。

**第一步：修改项目依赖**

我将更新 `requirements.txt` 文件，移除 MySQL 相关的驱动 `pymysql` 和 `aiomysql`，并添加 PostgreSQL 的异步驱动 `asyncpg`。

---

---

[AI 已应用变更到 requirements.txt]

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,10 @@ google-genai
 jinja2
 python-multipart
 cryptography
-pymysql
 sqlalchemy
-aiomysql
 aiosqlite
 databases
 python-dotenv
 apscheduler
 packaging
+asyncpg
