AI: 好的，遵照计划，在更新了 `requirements.txt` 之后，下一步是更新环境配置模板文件 `.env.example`。
好的，遵照计划，在更新了 `requirements.txt` 之后，下一步是更新环境配置模板文件 `.env.example`。

我将移除 MySQL 相关的配置项（`MYSQL_*`），并添加 PostgreSQL 所需的配置项（`POSTGRES_*`），同时将 `DATABASE_TYPE` 的默认值更改为 `postgres`。

---

---

[AI 已应用变更到 .env.example]

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,11 @@
 # 数据库配置
-DATABASE_TYPE=mysql
+DATABASE_TYPE=postgres
 #SQLITE_DATABASE=default_db
-MYSQL_HOST=gemini-balance-mysql
-#MYSQL_SOCKET=/run/mysqld/mysqld.sock
-MYSQL_PORT=3306
-MYSQL_USER=gemini
-MYSQL_PASSWORD=change_me
-MYSQL_DATABASE=default_db
+POSTGRES_HOST=gemini-balance-postgres
+POSTGRES_PORT=5432
+POSTGRES_USER=gemini
+POSTGRES_PASSWORD=change_me
+POSTGRES_DB=default_db
 API_KEYS=["AIzaSyxxxxxxxxxxxxxxxxxxx","AIzaSyxxxxxxxxxxxxxxxxxxx"]
 ALLOWED_TOKENS=["sk-123456"]
 AUTH_TOKEN=sk-123456
