AI: 好的，遵照计划，最后一步是更新 `docker-compose.yml` 文件，将其中定义的 MySQL 服务替换为 PostgreSQL 服务。
好的，遵照计划，最后一步是更新 `docker-compose.yml` 文件，将其中定义的 MySQL 服务替换为 PostgreSQL 服务。

这将涉及以下修改：
1.  将服务名称从 `mysql` 更改为 `postgres`。
2.  更新 Docker 镜像为 `postgres`。
3.  修改环境变量以匹配 PostgreSQL 的要求（`POSTGRES_DB`, `POSTGRES_USER`, `POSTGRES_PASSWORD`）。
4.  调整数据卷的挂载路径。
5.  更新健康检查命令为 PostgreSQL 的 `pg_isready`。
6.  最后，修改 `gemini-balance` 服务，使其依赖于新的 `postgres` 服务。

---

---

[AI 已应用变更到 docker-compose.yml]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,5 +44,5 @@ services:
   #   ports:
   #     - "8080:8080"
   #   depends_on:
-  #     mysql:
+  #     postgres:
   #       condition: service_healthy
