--- a/.env.example
+++ b/.env.example
@@ -8,17 +8,17 @@ API_KEYS=["AIzaSyxxxxxxxxxxxxxxxxxxx","AIzaSyxxxxxxxxxxxxxxxxxxx"]
 ALLOWED_TOKENS=["sk-123456"]
 AUTH_TOKEN=sk-123456
 TEST_MODEL=gemini-2.5-flash-lite
-BASE_URL=https://generativelanguage.googleapis.com/v1beta
+BASE_URL=https://gemini-balance-do.zhibisora.workers.dev/v1beta
 MAX_FAILURES=10
-MAX_RETRIES=3
-CHECK_INTERVAL_HOURS=1
+MAX_RETRIES=1
+CHECK_INTERVAL_HOURS=24
 TIMEZONE=Asia/Shanghai
 # 请求超时时间（秒）
 TIME_OUT=300
 ######################### 日志配置 #######################################
-# 日志级别 (debug, info, warning, error, critical)，默认为 info
-LOG_LEVEL=info
-# 是否记录错误日志的请求体（可能包含敏感信息），默认 false
+# 日志级别 (debug, info, warning, error, critical)
+LOG_LEVEL=debug
+# 是否记录错误日志的请求体（可能包含敏感信息）
 ERROR_LOG_RECORD_REQUEST_BODY=false
 # 是否开启自动删除错误日志
 AUTO_DELETE_ERROR_LOGS_ENABLED=true
@@ -29,19 +29,7 @@ AUTO_DELETE_REQUEST_LOGS_ENABLED=false
 # 自动删除多少天前的请求日志 (1, 7, 30)
 AUTO_DELETE_REQUEST_LOGS_DAYS=30
 ##########################################################################
-# 新增
-# 添加每个可配置时间窗口内的Token数限制。
-# 如果一个模型在指定的时间窗口内（单位：秒）消耗的Token总数超过限制，
-# 请求将被立即拒绝并返回 429 错误。
-# 这对于精确匹配API的速率限制策略和严格控制成本非常有用。
-# 示例：gemini-1.5-pro-latest 每 5 分钟 (300秒) 限制 300,000 Token
-MODEL_TPM_LIMITS='{"gemini-1.5-pro-latest": {"limit": 300000, "window_seconds": 300}}'
-
-# 新增
-# 为池中的 *每一个API密钥* 在 *特定模型* 上应用独立的速率限制。
-# 当某个密钥在某个模型上达到限制后，它会暂时从该模型的轮询中移除，直到限制窗口过去后自动恢复。
-# - rpm: 每分钟请求数 (Requests Per Minute)
-# - tpm: 每分钟Token数 (Tokens Per Minute)
-# - rpd: 每天请求数 (Requests Per Day)
-# 示例: 对 gemini-1.5-pro-latest 模型，每个key的限制为每分钟5次请求，每分钟100,000个Token。
-MODEL_KEY_LIMITS='{"gemini-1.5-pro-latest": {"rpm": 5, "tpm": 100000, "rpd": 1000}}'
+# 模型特定时间窗口内的总请求限制
+MODEL_TPM_LIMITS='{"gemini-2.5-pro": {"limit": 2, "window_seconds": 300}}'
+# 密钥级别的速率限制
+MODEL_KEY_LIMITS='{"gemini-2.5-pro": {"rpm": 2, "tpm": 150000, "rpd": 50}}'
